# Project_AONIX

./: Cargo.toml  README.md
crates/aonix/: Cargo.toml
crates/aonix/src/: lib.rs
crates/aonix/tests/: phase2_pipeline.rs  phase3_evaluator.rs  phase4_memory.rs  phase5_testing.rs  phase6_optimizer.rs  simulate.rs  validate_semantic.rs
crates/aonix/tests/data/: inverter.aoncir  inverter_with_opaque_sections.aoncir  one_bit_full_adder_redundant.aoncir  pass_through.aoncir
crates/aonix/tests/data/invalid/: arity_and_one_input.aoncir  arity_and_three_inputs.aoncir  dangling_signal.aoncir  duplicate_identifier.aoncir  gate_input_references_output_port.aoncir  group_duplicate_bit_position.aoncir  group_duplicate_id.aoncir  kind_xor.aoncir
docs/: 00-vision.md  01-rules-absolute.md  02-architecture.md  03-format-aoncir.md  04-format-aonclg.md  05-memory-system.md  06-curriculum.md  07-testing-and-verification.md  08-actions-and-rewards.md  09-visualization-vulkan.md  10-coordinator.md  11-roadmap.md  12-task-specification.md  13-circuit-acceptance.md  14-circuit-rejection.md  15-optimization-rules.md  16-ai-visibility-limits.md  17-aoncir-aonclg-relationship.md  18-operational-vs-non-operational-memory.md  19-versioning-policy.md  20-task-catalog-levels-0-5.md  21-aoncir-syntax.md  22-edge-case-catalog.md  23-optimizer-transformations.md  24-semantic-tag-conventions.md  25-human-audit-policy.md  PROGRESS.md  glossary.md
src/: lib.rs  main.rs
tests/: hash.rs  parse_invalid.rs  parse_valid.rs  roundtrip.rs  semantic_groups_model.rs  simulate_batch.rs
(+81 files in other folders)
