[workspace]
resolver = "3"
members = [
    "crates/aonix-core",
    "crates/aonix-sim",
    "crates/aonix-validate",
    "crates/aonix-verify",
    "crates/aonix-eval",
    "crates/aonix",
    "crates/aonix-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
blake3 = "1.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
aonix-core = { path = "crates/aonix-core" }
aonix-sim = { path = "crates/aonix-sim" }
aonix-validate = { path = "crates/aonix-validate" }
aonix-verify = { path = "crates/aonix-verify" }
aonix-eval = { path = "crates/aonix-eval" }
aonix = { path = "crates/aonix" }
