[package]
name = "aonix"
version.workspace = true
edition.workspace = true

[lib]
name = "aonix"
path = "src/lib.rs"

[dependencies]
aonix-core.workspace = true
aonix-sim.workspace = true
aonix-validate.workspace = true
aonix-verify.workspace = true
aonix-eval.workspace = true
aonix-memory.workspace = true
aonix-test.workspace = true
